2014-09-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-parse): Require mime-parse.el.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-translate-single-part-tag): Fix the last
	change.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-split-and-send): Do not use
	`insert-buffer' and `goto-line'.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Fix `mapcar' called
	for effect.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-image.el (mime-image-normalize-xbm-buffer): Add comment for
	using save-excursion+set-buffer.

	* mime-partial.el
	(mime-combine-message/partial-pieces-automatically): Likewise.

	* mime-view.el (mime-view-buffer)
	(mime-preview-follow-current-entity): Likewise.

	* semi-def.el (mime-button-dispatcher): Likewise.

2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-split-and-send): Use
	`with-current-buffer' rather than save-excursion+set-buffer.

	* mime-play.el (mime-store-message/partial-piece): Likewise.

	* mime-view.el (mime-preview-original-major-mode)
	(mime-maybe-hide-echo-buffer)
	(mime-preview-follow-current-entity): Likewise.

2014-08-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-process-multipart-1)
	(mime-edit-translate-single-part-tag)
	(mime-edit-decode-single-part-in-buffer): Remove concat from
	insert and concat combination.

	* mime-view.el (mime-preview-follow-current-entity): Likewise.

	* semi-def.el (mime-insert-button): Likewise.

2014-08-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-convert-lbt-string): Refactored.

2014-08-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-pgp-get-signers): Prefer
	mime-edit-pgp-signers's key to the first found key for the same
	user ID.
	(mime-edit-pgp-signers): Update docstring.

2014-05-30  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>
