@@ -1,5 +1,11 @@
 2014-09-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
+	* mime-pgp.el (mime-pgp-decrypt-string)
+	(mime-verify-application/*-signature-internal): Bind
+	inhibit-eol-conversion to nil while eol conversion.
+
+2014-09-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
 	* mime-pgp.el (mime-parse): Require mime-parse.el.
 
 2014-08-31  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
